--- a/css/sub2_2.css
+++ b/css/sub2_2.css
@@ -181,7 +181,8 @@ section#menu ul > li:nth-child(3n){
   padding-top: 30px;
   /* border-left-style: 2px solid #C3512F; */
 }
-#menu div .dash{
+#menu div .dash1,
+#menu div .dash2{
   width: 0.5px;
   height: 50px;
   border-left: 3px solid #C3512F;
@@ -247,6 +248,11 @@ section#menu ul > li:nth-child(3n){
 
 #espresso{
   margin-top: 129px;
+}
+#espresso .dash2 {
+  /* margin-bottom: 150px; */
+  /* top: 150px; */
+  margin-top: 10px!important;
 }
 #coffee > ul li a {
   font-size: 20px;
