--- a/css/sub2_2.css
+++ b/css/sub2_2.css
@@ -86,7 +86,12 @@
     padding-bottom: 100px;
 }
 /* 사이드바 */
-section#menu {
+section#menu1,
+section#menu2,
+section#menu3,
+section#menu4,
+section#menu5,
+section#menu6 {
   width: 1200px;
   margin: 0 auto;
   /* overflow: hidden; */
@@ -133,32 +138,102 @@ section#menu {
 
 
 
-section#menu img {
+section#menu1 img,
+section#menu2 img,
+section#menu3 img,
+section#menu4 img,
+section#menu5 img,
+section#menu6 img {
   width: 323px;
   /* height: 338px; */
   /* outline: 1px solid blue; */
 }
 
-section#menu ul {
+section#menu1 ul,
+section#menu2 ul,
+section#menu3 ul,
+section#menu4 ul,
+section#menu5 ul,
+section#menu6 ul {
   overflow: hidden;
   width: 1200px;
 }
 
-section#menu ul > li {
+section#menu1 ul > li,
+section#menu2 ul > li,
+section#menu3 ul > li,
+section#menu4 ul > li,
+section#menu5 ul > li,
+section#menu6 ul > li {
   float: left;
   width: 323px;
   text-align: center;
   margin-right: 70px;
+  /* margin-top: 120px; */
   /* margin: 50px 0; */
   /* height: 294px; */
-  font-size: 25px;
+  font-size: 18px;
   margin-bottom: 120px;
+  font-weight: bold;
 }
-section#menu ul > li:first-child
-  {margin-left: 50.5px;}
-section#menu ul > li:nth-child(4)
-  {margin-left: 50.5px;}
-section#menu ul > li:nth-child(3n){
+#menu1 ul li img,
+#menu2 ul li img,
+#menu3 ul li img,
+#menu4 ul li img,
+#menu5 ul li img,
+#menu6 ul li img
+{margin-bottom: 25px;}
+#menu1 ul li:nth-child(4),
+#menu1 ul li:nth-child(5),
+#menu1 ul li:nth-child(6) {margin-top: -25px;}
+#menu2 ul li:nth-child(4),
+#menu2 ul li:nth-child(5),
+#menu2 ul li:nth-child(6) {margin-top: -25px;}
+#menu3 ul li:nth-child(4),
+#menu3 ul li:nth-child(5),
+#menu3 ul li:nth-child(6) {margin-top: -25px;}
+#menu4 ul li:nth-child(4),
+#menu4 ul li:nth-child(5),
+#menu4 ul li:nth-child(6) {margin-top: -25px;}
+#menu5 ul li:nth-child(4),
+#menu5 ul li:nth-child(5),
+#menu5 ul li:nth-child(6) {margin-top: -25px;}
+#menu6 ul li:nth-child(4),
+#menu6 ul li:nth-child(5),
+#menu6 ul li:nth-child(6) {margin-top: -25px;}
+section#menu1 ul > li:first-child{margin-left: 50.5px;}
+section#menu2 ul > li:first-child{margin-left: 50.5px;}
+section#menu3 ul > li:first-child{margin-left: 50.5px;}
+section#menu4 ul > li:first-child{margin-left: 50.5px;}
+section#menu5 ul > li:first-child{margin-left: 50.5px;}
+section#menu6 ul > li:first-child{margin-left: 50.5px;}
+section#menu1 ul > li:nth-child(4){margin-left: 50.5px;}
+section#menu2 ul > li:nth-child(4){margin-left: 50.5px;}
+section#menu3 ul > li:nth-child(4){margin-left: 50.5px;}
+section#menu4 ul > li:nth-child(4){margin-left: 50.5px;}
+section#menu5 ul > li:nth-child(4){margin-left: 50.5px;}
+section#menu6 ul > li:nth-child(4){margin-left: 50.5px;}
+section#menu1 ul > li:nth-child(3n){
+  margin-right: 10px;
+  margin-left: 25px;
+}
+section#menu2 ul > li:nth-child(3n){
+  margin-right: 10px;
+  margin-left: 25px;
+}
+section#menu3 ul > li:nth-child(3n){
+  margin-right: 10px;
+  margin-left: 25px;
+}
+section#menu4 ul > li:nth-child(3n){
+  margin-right: 10px;
+  margin-left: 25px;
+}
+section#menu5 ul > li:nth-child(3n){
+  margin-right: 10px;
+  margin-left: 25px;
+}
+section#menu6 ul > li:nth-child(3n){
   margin-right: 10px;
   margin-left: 25px;
 }
@@ -167,11 +242,21 @@ section#menu ul > li:nth-child(3n){
   outline: 1px solid red;
 } */
 
-#menu div {
+#menu1 div,
+#menu2 div,
+#menu3 div,
+#menu4 div,
+#menu5 div,
+#menu6 div {
   margin-bottom: 150px;
 }
 
-#menu div h1 {
+#menu1 div h1,
+#menu2 div h1,
+#menu3 div h1,
+#menu4 div h1,
+#menu5 div h1,
+#menu6 div h1 {
   font-family: 'Noto Sans KR', sans-serif;
   font-size: 40px;
   width: 1200px;
@@ -181,8 +266,7 @@ section#menu ul > li:nth-child(3n){
   padding-top: 30px;
   /* border-left-style: 2px solid #C3512F; */
 }
-#menu div .dash1,
-#menu div .dash2{
+#menu1 div .dash1{
   width: 0.5px;
   height: 50px;
   border-left: 3px solid #C3512F;
@@ -190,7 +274,20 @@ section#menu ul > li:nth-child(3n){
   margin-top: 28px;
   margin-right: 22px;
 }
-#menu > div > h1 > p > span {
+.dash2{
+  width: 0.5px;
+  height: 50px;
+  border-left: 3px solid #C3512F;
+  float: left;
+  margin-top: 10px;
+  margin-right: 22px;
+}
+#menu1 > div > h1 > p > span,
+#menu2 > div > h1 > p > span,
+#menu3 > div > h1 > p > span,
+#menu4 > div > h1 > p > span,
+#menu5 > div > h1 > p > span,
+#menu6 > div > h1 > p > span {
   font-size: 16px;
   margin-left: 20px;
   color: rgba(46,46,46,0.6);
@@ -246,15 +343,8 @@ section#menu ul > li:nth-child(3n){
 #drip_text > div:last-child > article
 {margin-bottom: 35px;}
 
-#espresso{
-  margin-top: 129px;
-}
-#espresso .dash2 {
-  /* margin-bottom: 150px; */
-  /* top: 150px; */
-  margin-top: 10px!important;
-}
-#coffee > ul li a {
+
+.main_title_text > ul li a {
   font-size: 20px;
   font-weight: bold;
   color: #382410;}
@@ -263,7 +353,7 @@ section#menu ul > li:nth-child(3n){
   width: 1200px;
   height: 500px;
   position: relative;
-  top: 120px;
+  top: 150px;
   margin: 0 auto;
   margin-top: -190px;
   /* outline: 1px solid blue; */
@@ -277,10 +367,12 @@ section#menu ul > li:nth-child(3n){
   float: left;
   width: 190px!important;
   /* height: 300px; */
-  margin-right: 30px;
-  margin-left: 170px;
+  margin-right: 35px;
+  margin-left: 165px;
   font-size: 18px!important;
-  
+}
+.menu_list > #move_r{
+  margin-left: 170px;
 }
 .menu_list > ul > li{
   float: left!important;
@@ -290,12 +382,12 @@ section#menu ul > li:nth-child(3n){
   display: block;
   color: #382410;
 }
-.menu_list #blank1{
+.menu_list .blank1{
   margin-top: 15px;
   /* outline: 1px solid red; */
 }
 .menu_list > #add_text{
-  margin-top: 350px;
+  margin-top: 320px;
   margin-right: 140px;
   /* outline: 1px solid red; */
   text-align: right;
@@ -307,13 +399,80 @@ section#menu ul > li:nth-child(3n){
   font-size: 12px;
   color: #382410;
 }
-#menu div:first-child {
-  margin-bottom: 0px;
+.menu_list > #add_text1{
+  margin-top: 410px;
+  margin-right: 140px;
+  /* outline: 1px solid red; */
+  text-align: right;
+  /* margin-bottom: -40px; */
+  height: 50px;
+  position: absolute;
+  right: -140px;
+  /* bottom: -50px; */
+  font-size: 12px;
+  color: #382410;
 }
-.show {
-  display: block;
+.menu_list > #add_text2{
+  margin-top: 600px;
+  margin-right: 140px;
+  /* outline: 1px solid red; */
+  text-align: right;
+  /* margin-bottom: -40px; */
+  height: 50px;
+  position: absolute;
+  right: -140px;
+  /* bottom: -50px; */
+  font-size: 12px;
+  color: #382410;
 }
 
-.hide {
-  display: none;
+.menu_list #add_text3{
+  margin-top: 210px;
+  margin-right: 140px;
+  /* outline: 1px solid red; */
+  text-align: left;
+  /* margin-bottom: -40px; */
+  height: 50px;
+  position: absolute;
+  right: -140px;
+  /* bottom: -50px; */
+  font-size: 12px;
+  color: #382410;
 }
+#allMenu2 > .inMenu > .menu_list ul {
+  width: 220px!important;
+  /* outline: 1px solid red; */
+  float: left;
+  /* width: 190px!important; */
+  /* height: 300px; */
+  margin-right: 30px;
+  margin-left: 150px;
+  /* font-size: 18px!important; */
+}
+#allMenu5 > .inMenu > .menu_list ul {
+  width: 230px!important;
+  /* outline: 1px solid red; */
+  float: left;
+  /* width: 190px!important; */
+  /* height: 300px; */
+  margin-right: 20px;
+  margin-left: 150px;
+  /* font-size: 18px!important; */
+}
+#menu1 div:first-child {
+  margin-bottom: 0px;
+}
+#tea_menu{
+  float: right;
+  width: 550px;
+  /* outline: 1px solid red; */
+}
+#tea_menu ul{
+  width: 360px;
+  margin-bottom: 20px;
+  /* outline: 1px solid blue; */
+}
+#tea_menu img{margin-bottom: 20px;}
+.show {display: block;}
+
+.hide {display: none;}
